--- a/client/public/css/home/home-project.css
+++ b/client/public/css/home/home-project.css
@@ -14,7 +14,8 @@
 .home-project .projects {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    flex-flow: wrap;
 } 
 
 .home-project .projects .projects-card {
