--- a/client/public/css/footer/footer.css
+++ b/client/public/css/footer/footer.css
@@ -9,6 +9,7 @@
     color: var(--primary-white);
     display: flex;
     justify-content: space-between;
+    flex-flow: wrap;
 }
 
 .footer-copyright {
