--- a/client/public/css/header/nav-menu.css
+++ b/client/public/css/header/nav-menu.css
@@ -1,9 +1,9 @@
 .nav-menu {
     display: flex;
     justify-content: space-between;
-    padding: 0 62px;
+    flex-flow: wrap;
+    padding: 32px 62px;
     color: var(--primary-white);
-    height: 146px;
     align-items: center;
     transition: 0.2s ease-in-out;
 }
@@ -21,7 +21,7 @@
 }
 
 .menu-list .menu-item {
-    margin-left: 30px;
+    margin-right: 28px;
     font-size: 24px;
     font-weight: 500;
 }
