--- a/client/public/css/home/home.css
+++ b/client/public/css/home/home.css
@@ -3,4 +3,4 @@
 @import url(./home-product/home-product.css);
 @import url(./home-count-up.css);
 @import url(./home-project.css);
-@import url(./home-news.css);
+/* @import url(./home-news.css); */
