--- a/client/views/aboutUs/aboutUs-body/our-product.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-product.ejs
@@ -3,20 +3,26 @@
     <div class="row-product">
         <div class="">
             <div class="card-product">
-                <img src="img/aboutUs-CyberSecu.png" alt="" class="card-product-img">
-                <div class="card-product-name">CyberSecurity</div>
+                <a href="#">
+                    <img src="img/aboutUs/aboutUs-CyberSecu.png" alt="" class="card-product-img">
+                    <div class="card-product-name">CyberSecurity</div>
+                </a>
             </div>
         </div>
         <div class="">
             <div class="card-product">
-                <img src="img/aboutUs-DT.png" alt="" class="card-product-img">
-                <div class="card-product-name">Digital Transformation </div>
+                <a href="#">
+                    <img src="img/aboutUs/aboutUs-DT.png" alt="" class="card-product-img">
+                    <div class="card-product-name">Digital Transformation </div>
+                </a>
             </div>
         </div>
         <div class="">
             <div class="card-product">
-                <img src="img/aboutUs-Digital.png" alt="" class="card-product-img">
-                <div class="card-product-name">Software</div>
+                <a href="#">
+                    <img src="img/aboutUs/aboutUs-Digital.png" alt="" class="card-product-img">
+                    <div class="card-product-name">Software</div>
+                </a>
             </div>
         </div>
     </div>
