--- a/client/views/customer/customer-body/customer-body.ejs
+++ b/client/views/customer/customer-body/customer-body.ejs
@@ -1,6 +1,5 @@
 <%- include('./customer-contact-img.ejs') %> 
 <div class="container">
-    <%- include('./protential-customers.ejs') %> 
+    <%- include('./protential-customers.ejs', customers) %> 
     <%- include('./featured-partner.ejs') %> 
-    <%- include('./customer-said.ejs') %>
 </div>
