--- a/client/public/css/aboutUs/aboutUs-our-product.css
+++ b/client/public/css/aboutUs/aboutUs-our-product.css
@@ -6,13 +6,17 @@
     place-items: center center;
 }
 .card-product{
-    
     height: 620px;
     max-height: 620px;
     background-color: white;
     border-radius: 15px;
     margin: 10px 15px;
 }
+
+.card-product a {
+    color: var(--primary-black);
+}
+
 .card-product-img{
     width: 100%;
 }
