--- a/client/public/css/contact/contact.css
+++ b/client/public/css/contact/contact.css
@@ -8,7 +8,7 @@ ul{
     background-color: #000;
 }
 .img-cotainer{
-    background-image:url(../../img/Contact.jpg) ;
+    background-image:url(../../img/Background.jpg) ;
     background-size: cover;
     background-repeat: no-repeat;
     height:790px;
@@ -25,7 +25,7 @@ ul{
     text-transform: uppercase;
     color: #fff;
     font-size: 48px;
-transform: translateY(-42px);
+    transform: translateY(-42px);
   
 }
 .contact-body{
@@ -94,6 +94,7 @@ transform: translateY(-42px);
     display: flex;
     padding: 40px 150px;
     justify-content: center;
+    flex-flow: wrap;
     column-gap: 150px;
     
 }
