--- a/client/public/css/home/home-intro.css
+++ b/client/public/css/home/home-intro.css
@@ -1,5 +1,5 @@
 .home-intro {
-    background-image: url('../../img/background-home.jpg');
+    background-image: url('../../img/home/background-home.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
