--- a/client/views/aboutUs/aboutUs-body/aboutUs-body.ejs
+++ b/client/views/aboutUs/aboutUs-body/aboutUs-body.ejs
@@ -1,6 +1,6 @@
 <%- include('./aboutUs-contact-img.ejs') %> 
 <div class="container">
-    <%- include('./description.ejs') %> 
+    <%- include('./description.ejs', aboutUs) %> 
     <%- include('./our-leader.ejs', personnels) %> 
     <%- include('./our-department.ejs') %> 
     <%- include('./our-product.ejs') %>  
