--- a/client/views/aboutUs/aboutUs-body/description.ejs
+++ b/client/views/aboutUs/aboutUs-body/description.ejs
@@ -3,16 +3,14 @@
     <div class="description">
         <div class="title">GPT GROUP - Global Platform Technology</div>
         <div class="about-us">
-            <p>Is a Technology Group focus development quality of products in Cybersecurity, Digital Transformation,
-                Software.Create a powerful transformation to help Small and Medium Enterprises realize their Vision & Mission, thereby benefiting customers, 
-                employees, and investors.<br>
-                2027 is the number one Technology Group quality assurance in Cybersecurity, Digital Transformation, Software in Vietnam.
+            <p><%= introduction %> <br>
+                <%= goals[1] %> 
             </p>
         </div>
         <br>
         <div class="title">Our core valsues</div>
         <p class="about-us">Based on our core values of
-            <span class="bold-description">Trust, Frankness, Effectiveness</span>
+            <span class="bold-description"><%= values %> </span>
            for people and are part of everything we do.<br>
            They relate to all our business activities and define the behavior anticipated by every employee.<br>
            Our people include a range of professional qualifications offer outstanding expertise, experience, and superior client-driven top talent with an insight into agility, efficiency, and consistency. We value our people, encourage their development, and reward their performance.</p>
