--- a/client/views/common/footer/footer-brand.ejs
+++ b/client/views/common/footer/footer-brand.ejs
@@ -1,5 +1,5 @@
 <div class="footer-brand">
-    <div class="brand-logo"><img src="img/logo_footer.png" alt="logo gpt group"></div>
+    <div class="brand-logo"><img src="img/logo_header.png" alt="logo gpt group"></div>
     <div class="brand-name">GPT GROUP</div>
     <div class="brand-slogan">MAKE A DIFFERENCE</div>
 </div>
