--- a/client/views/customer/customer-body/protential-customers.ejs
+++ b/client/views/customer/customer-body/protential-customers.ejs
@@ -1,101 +1,14 @@
 <div class="grid">
     <h1 class="category-cus">PROTENTIAL CUSTOMERS</h1>
     <div class="row-protential">
-        <div class="">
+        <% for(let i = 0; i < customers.length; i++) { %>
             <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
+                <img src="<%= customers[i].logo %> " alt="" class="card-customer-img">
                 <div class="card-customer-name">
-                    Automotive
+                    <%= customers[i].name %>
                 </div>
             </div>
-        </div>
-        <div class="">
-            <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
-                <div class="card-customer-name">
-                    Chemical, Bio-Tech  <br>Pharmaceutical
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
-                <div class="card-customer-name">
-                    Energy / Unilities
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
-                <div class="card-customer-name">
-                    Financial Services<br>(Banking/Mortgage)
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
-                <div class="card-customer-name">
-                    Food & Beverage
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
-                <div class="card-customer-name">
-                    Manufacturing
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
-                <div class="card-customer-name">
-                    Media Entertaiment
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
-                <div class="card-customer-name">
-                    Real Estate
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
-                <div class="card-customer-name">
-                    Retail
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
-                <div class="card-customer-name">
-                    Telecommunications
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
-                <div class="card-customer-name">
-                    Logistic
-                </div>
-            </div>
-        </div>
-        <div class="">
-            <div class="card-customer">
-                <img src="img/customer-img-protential.png" alt="" class="card-customer-img">
-                <div class="card-customer-name">
-                    Goverment<br>Pulic Sector
-                </div>
-            </div>
-        </div>
+        <% } %>  
+    
     </div>
 </div>
