--- a/client/views/home/home-body/home-product.ejs
+++ b/client/views/home/home-body/home-product.ejs
@@ -4,34 +4,33 @@
     <div class="products">
         <div class="card-home-product">
             <a href="#">
-                <div class="card-image"><img src="img/cyber-security-home.svg" alt="GPT Cyber security"></div>
+                <div class="card-image"><img src="img/home/cyber-security-home.svg" alt="GPT Cyber security"></div>
                 <div class="card-title">Cyber Security</div>
-                <div class="card-description">Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec
-                tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero
-                ultrices mollis. In hac habitasse platea dictumst.</div>
+                <div class="card-description"> The technology environment is increasingly risky, cyber-attacks, hackers stealing data appear at an alarming rate around the globe. 
+                    To ensure the safety and security of enterprise data, it is essential to equip information technology security solutions. 
+                    Coming to GPT Cybersecurity will help protect your business against cyber threats and make the most of online opportunities. 
+                </div>
             </a>
         </div>
         <div class="card-home-product">
             <a href="#">
-                <div class="card-image"><img src="img/digital-transformation-home.svg" alt="GPT Digital transformation"></div>
+                <div class="card-image"><img src="img/home/digital-transformation-home.svg" alt="GPT Digital transformation"></div>
                 <div class="card-title">
                     Digital Transformation
                 </div>
-                <div class="card-description">
-                    Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec
-                    tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero
-                    ultrices mollis. In hac habitasse platea dictumst.
+                <div class="card-description">With the development of information technology, the demand for digital transformation is increasing day by day. The integration of digital technologies into business processes at enterprises is a new trend. 
+                    Digital transformation enhances the experience and optimizes business processes. Improve competitiveness and bring benefits both in terms of human and material resources to your business. 
+                    Let's experience the most advanced technology transformation at GPT Group 
                 </div>
             </a>
         </div>
         <div class="card-home-product">
             <a href="#">
-                <div class="card-image"><img src="img/software-home.svg" alt="GPT Software"></div>
+                <div class="card-image"><img src="img/home/software-home.svg" alt="GPT Software"></div>
                 <div class="card-title">Software</div>
-                <div class="card-description">
-                    Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec
-                    tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero
-                    ultrices mollis. In hac habitasse platea dictumst.
+                <div class="card-description">In addition to the tools of the traditional business model, an indispensable tool for your business in this 4.0 era is a computer
+                    software system used to satisfy certain organizational needs/enterprises. Enterprise software solutions enable organizations to streamline and automate their
+                    processes, which can lead to greater accuracy in fulfilling your orders and more efficiency in your operations. 
                 </div>
             </a>
         </div>
