--- a/client/public/css/pageError/pageError.css
+++ b/client/public/css/pageError/pageError.css
@@ -1,5 +1,5 @@
 .page-error {
-    background-image: url(../../img/Contact.jpg);
+    background-image: url(../../img/Background.jpg);
     color: var(--primary-white);
     height: 100vh;
     background-repeat: no-repeat;
