--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -9,3 +9,5 @@
 @import url(./home/home.css);
 @import url(./common/btn.css);
 @import url(./pageError/pageError.css);
+@import url(./product/product.css);
+@import url(./common/common/nav-product/nav-product.css);
