--- a/client/views/aboutUs/aboutUs-body/aboutUs-contact.ejs
+++ b/client/views/aboutUs/aboutUs-body/aboutUs-contact.ejs
@@ -6,7 +6,7 @@
                     Please contact us immediately for detailed advice or information support about the product you are interested in
                 </div>
                 <div class="card-copntacct-btn">
-                    <a href="*" class="btn-contact">Contact</a>
+                    <a href="/contact" class="btn-contact">Contact</a>
                 </div>
             </div>
         </div>
