--- a/client/views/aboutUs/aboutUs-body/our-department.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-department.ejs
@@ -3,7 +3,7 @@
     <div class="row-department">
         <div class="card-department">
             <a href="#">
-                <img src="img/aboutUs/aboutUs-humanResources.png" alt="" class="card-department-img">
+                <img src="/img/aboutUs/aboutUs-humanResources.png" alt="" class="card-department-img">
                 <div class="card-department-name">Human Resouces</div>
                 <p class="card-department-desctiption">
                     Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
@@ -15,7 +15,7 @@
         </div>
         <div class="card-department">
             <a href="#">
-                <img src="img/aboutUs/aboutUs-marketTing.png" alt="" class="card-department-img">
+                <img src="/img/aboutUs/aboutUs-marketTing.png" alt="" class="card-department-img">
                 <div class="card-department-name">Marketing & Sale</div>
                 <p class="card-department-desctiption">
                     Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
@@ -27,7 +27,7 @@
         </div>
         <div class="card-department">
             <a href="#">
-                <img src="img/aboutUs/aboutUs-IT.png" alt="" class="card-department-img">
+                <img src="/img/aboutUs/aboutUs-IT.png" alt="" class="card-department-img">
                 <div class="card-department-name">Information Technology</div>
                 <p class="card-department-desctiption">
                     Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
@@ -39,7 +39,7 @@
         </div>
         <div class="card-department">
             <a href="#">
-                <img src="img/aboutUs/aboutUs-design.png" alt="" class="card-department-img">
+                <img src="/img/aboutUs/aboutUs-design.png" alt="" class="card-department-img">
                 <div class="card-department-name">Desgin</div>
                 <p class="card-department-desctiption">
                     Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
@@ -51,7 +51,7 @@
         </div>
         <div class="card-department">
             <a href="#">
-                <img src="img/aboutUs/aboutUs-CusSer.png" alt="" class="card-department-img">
+                <img src="/img/aboutUs/aboutUs-CusSer.png" alt="" class="card-department-img">
                 <div class="card-department-name">Customer Services</div>
                 <p class="card-department-desctiption">
                     Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
@@ -63,7 +63,7 @@
         </div>
         <div class="card-department">
             <a href="#">
-                <img src="img/aboutUs/aboutUs-sp.png" alt="" class="card-department-img">
+                <img src="/img/aboutUs/aboutUs-sp.png" alt="" class="card-department-img">
                 <div class="card-department-name">Support</div>
                 <p class="card-department-desctiption">
                     Aliquam a dui vel justo fringilla euismod id id enim. Nunc non semper tellus. 
