--- a/client/views/aboutUs/aboutUs-body/our-leader.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-leader.ejs
@@ -3,7 +3,7 @@
     <div class="row-leader">
         <% for(let i = 0; i < personnels.length; i++) { %>
             <div class="card">
-                <img src="<%= personnels[i].img %> " alt="" class="card-img">
+                <img src="/<%= personnels[i].img %> " alt="" class="card-img">
                 <div class="card-name"><%= personnels[i].name %> </div>
                 <div class="card-work"><%= personnels[i].position %> </div>
                 <div class="card-description">
