--- a/client/views/aboutUs/aboutUs-body/our-product.ejs
+++ b/client/views/aboutUs/aboutUs-body/our-product.ejs
@@ -4,7 +4,7 @@
         <div class="">
             <div class="card-product">
                 <a href="#">
-                    <img src="img/aboutUs/aboutUs-CyberSecu.png" alt="" class="card-product-img">
+                    <img src="/img/aboutUs/aboutUs-CyberSecu.png" alt="" class="card-product-img">
                     <div class="card-product-name">CyberSecurity</div>
                 </a>
             </div>
@@ -12,7 +12,7 @@
         <div class="">
             <div class="card-product">
                 <a href="#">
-                    <img src="img/aboutUs/aboutUs-DT.png" alt="" class="card-product-img">
+                    <img src="/img/aboutUs/aboutUs-DT.png" alt="" class="card-product-img">
                     <div class="card-product-name">Digital Transformation </div>
                 </a>
             </div>
@@ -20,7 +20,7 @@
         <div class="">
             <div class="card-product">
                 <a href="#">
-                    <img src="img/aboutUs/aboutUs-Digital.png" alt="" class="card-product-img">
+                    <img src="/img/aboutUs/aboutUs-Digital.png" alt="" class="card-product-img">
                     <div class="card-product-name">Software</div>
                 </a>
             </div>
