--- a/client/views/contact/index.ejs
+++ b/client/views/contact/index.ejs
@@ -8,7 +8,7 @@
         </div>
         <div class="contact-body">  
             <div class="contact-logo">
-                <img src="img/logo.png" alt="Logo GPT">
+                <img src="/img/logo.png" alt="Logo GPT">
                 <h3 class="contact-name">gpt group</h3>
                 <p>Global Platform Technology</p>
                 <hr>
@@ -18,16 +18,16 @@
                     <h3>
                         Contact Information
                     </h3>
-                    <p><img src="icon/ci_location.svg" alt=""><span>Address: <%= address %>  </span></p>
-                    <p><img src="icon/email.svg" alt=""><span>Email: <%= email %> </span></p>
-                    <p><img src="icon/phone-voice.svg" alt=""><span>Phone Number: <%= phone %> </span></p>
+                    <p><img src="/icon/ci_location.svg" alt=""><span>Address: <%= address %>  </span></p>
+                    <p><img src="/icon/email.svg" alt=""><span>Email: <%= email %> </span></p>
+                    <p><img src="/icon/phone-voice.svg" alt=""><span>Phone Number: <%= phone %> </span></p>
         
                     <div class="contact-social">
-                        <a href="<%= linkedin %> " target="_blank"><img src="icon/linkedin.svg" alt="linkedin gpt group"></a>
+                        <a href="<%= linkedin %> " target="_blank"><img src="/icon/linkedin.svg" alt="linkedin gpt group"></a>
                         
-                        <a href="<%= instagram %> " target="_blank"><img src="icon/instagram.svg" alt="instagram gpt group"></a>
+                        <a href="<%= instagram %> " target="_blank"><img src="/icon/instagram.svg" alt="instagram gpt group"></a>
                             
-                        <a href="<%= facebook %> " target="_blank"><img src="icon/facebook.svg" alt="facebook gpt group"></a>
+                        <a href="<%= facebook %> " target="_blank"><img src="/icon/facebook.svg" alt="facebook gpt group"></a>
                     </div>
         
                 </div>
