--- a/client/views/customer/customer-body/customer-said.ejs
+++ b/client/views/customer/customer-body/customer-said.ejs
@@ -9,7 +9,7 @@
                     In euismod augue vitae nisi ultricies, non aliquet urna tincidunt.”
                 </p>
                 <div class="card-infomation">
-                    <img src="img/customer-img-avt.png" alt="" class="avt">
+                    <img src="/img/customer-img-avt.png" alt="" class="avt">
                     <div class="name-infomation">David Elson</div>
                 </div>
             </div>
@@ -22,7 +22,7 @@
                     In euismod augue vitae nisi ultricies, non aliquet urna tincidunt.”
                 </p>
                 <div class="card-infomation">
-                    <img src="img/customer-img-avt.png" alt="" class="avt">
+                    <img src="/img/customer-img-avt.png" alt="" class="avt">
                     <div class="name-infomation">David Elson</div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                     In euismod augue vitae nisi ultricies, non aliquet urna tincidunt.”
                 </p>
                 <div class="card-infomation">
-                    <img src="img/customer-img-avt.png" alt="" class="avt">
+                    <img src="/img/customer-img-avt.png" alt="" class="avt">
                     <div class="name-infomation">David Elson</div>
                 </div>
             </div>
