--- a/client/views/customer/customer-body/protential-customers.ejs
+++ b/client/views/customer/customer-body/protential-customers.ejs
@@ -3,7 +3,7 @@
     <div class="row-protential">
         <% for(let i = 0; i < customers.length; i++) { %>
             <div class="card-customer">
-                <img src="<%= customers[i].logo %> " alt="" class="card-customer-img">
+                <img src="/<%= customers[i].logo %> " alt="" class="card-customer-img">
                 <div class="card-customer-name">
                     <%= customers[i].name %>
                 </div>
