--- a/client/views/home/home-body/home-des-slogan.ejs
+++ b/client/views/home/home-body/home-des-slogan.ejs
@@ -1,10 +1,10 @@
 <div id="home-des-slogan">
     <div class="home-des-image">
-        <div class="des-img" data-aos="fade-right">
-            <img src="img/home/des-slogan-img.jpg" alt="">
+        <div class="des-img">
+            <img src="/img/home/des-slogan-img.jpg" alt="">
         </div>
     </div>
-    <div class="home-des-content" data-aos="fade-left">
+    <div class="home-des-content">
         <h1 class="des-slogan-title">MAKE A DIFERENCE</h1>
         <div class="des-slogan-content">We provide solutions to help your business build an effective digital transformation roadmap,
             provide enterprise security solutions, and execute software build-out development. And ensure optimal cost matching for your business.</div>
