--- a/client/views/home/home-body/home-intro.ejs
+++ b/client/views/home/home-body/home-intro.ejs
@@ -1,15 +1,12 @@
-<div class="grid">
-    <div class="home-intro row">
-        <div class="intro-info col l-6">
-            <div class="intro-info-title">GPT GROUP 
-                <br> GLOBAL PLATFORM TECHNOLOGY</div>
-            <div class="intro-info-description">
-                We create values and sustainable development for your business. Comprehensive from operation to information security in the 4.0 technology era
-            </div>
-            <div class="intro-info-action">
-                <div class="btn btn-cta"><a href="#home-des-slogan">SEE MORE</a></div>
-                <div class="btn btn-white"><a href="/aboutus">ABOUT US</a></div>
-            </div>
+<div class="home-intro">
+    <div class="intro-info">
+        <div class="intro-info-title">GPT GROUP GLOBAL PLATFORM TECHNOLOGY</div>
+        <div class="intro-info-description">
+            We create values and sustainable development for your business. Comprehensive from operation to information security in the 4.0 technology era
+        </div>
+        <div class="intro-info-action">
+            <div class="btn btn-cta"><a href="#home-des-slogan">SEE MORE</a></div>
+            <div class="btn btn-white"><a href="/aboutus">ABOUT US</a></div>
         </div>
     </div>
 </div>
