--- a/client/public/css/footer/footer.css
+++ b/client/public/css/footer/footer.css
@@ -19,3 +19,16 @@
     height: 48px;
     line-height: 48px;
 }
+
+@media screen and (max-width: 950px) {
+    .footer-info {
+        padding: 31px 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-info * {
+        text-align: center;
+    }
+}
