--- a/client/public/css/header/nav-menu.css
+++ b/client/public/css/header/nav-menu.css
@@ -2,10 +2,11 @@
     display: flex;
     justify-content: space-between;
     flex-flow: wrap;
-    padding: 32px 62px;
+    padding: 12px 62px;
     color: var(--primary-white);
     align-items: center;
     transition: 0.2s ease-in-out;
+    position: relative;
 }
 
 .normal-menu {
@@ -20,10 +21,18 @@
     margin-right: 20px;
 }
 
+.nav-menu .nav-menu-brand .logo-brand img {
+    width: 70px;
+}
+
 .menu-list .menu-item {
     margin-right: 28px;
-    font-size: 24px;
+    font-size: 16px;
     font-weight: 500;
+}
+
+.menu-list .menu-item:last-child {
+    margin: 0;
 }
 
 .menu-list .menu-item a:hover {
@@ -36,4 +45,66 @@
     -o-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
     -webkit-text-fill-color: transparent;
+}
+
+#menu-responsive-btn {
+    display: none;
+}
+
+@media screen and (max-width: 900px) {
+    #menu-responsive-btn {
+        display: block;
+        height: 30px;
+        border-radius: 2px;
+    }
+
+    #menu-responsive-btn:hover {
+        background: var(--gradient-golden);
+    }
+
+    #menu-responsive-btn img {
+        width: 30px;
+        cursor: pointer;
+    }
+
+    .menu-list {
+        position: absolute;
+        top: 100px;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        background: var(--primary-black);
+        text-align: center;
+        padding: 32px;
+        height: 100vh;
+        width: 100%;
+        transform: rotateY(90deg);
+        transform-origin: right;
+        transition: 0.3s;
+    }
+
+    .nav-menu-display {
+        transform: rotateY(0);
+    }
+
+    .menu-list .menu-item {
+        margin: 16px 0;
+    }
+
+    .menu-list .menu-item:last-child {
+        margin: 16px 0;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .nav-menu {
+        display: flex;
+        justify-content: space-between;
+        flex-flow: wrap;
+        padding: 12px 20px;
+        color: var(--primary-white);
+        align-items: center;
+        transition: 0.2s ease-in-out;
+    }   
+    
 }
