--- a/client/public/css/home/home-count-up.css
+++ b/client/public/css/home/home-count-up.css
@@ -9,6 +9,21 @@
 
 #home-count-up .count-up-item {
     text-align: center;
-    font-size: 48px;
+    font-size: 32px;
     font-weight: 500;
+}
+
+#home-count-up .count-up-item:nth-child(2){
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+@media screen and (max-width: 1336px) {
+    #home-count-up {
+        padding: 20px 50px;
+    }
+
+    #home-count-up .count-up-item {
+        margin-top: 20px;
+    }
 }
