--- a/client/views/common/head.ejs
+++ b/client/views/common/head.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="<%= content %> ">
     <meta name="keywords" content="<%= keyword %> ">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
     <title><%= title %> </title>
 </head>
