--- a/client/views/common/header/nav-menu.ejs
+++ b/client/views/common/header/nav-menu.ejs
@@ -1,11 +1,12 @@
 <menu class="nav-menu">
     <div class="nav-menu-brand">
-        <div class="logo-brand"><a href="/home"><img src="img/logo_header.png" alt="logo gpt group"></a></div>
+        <div class="logo-brand"><a href="/home"><img src="/img/logo_header.png" alt="logo gpt group"></a></div>
     </div>
     <div class="menu-list">
         <span class="menu-item"><a href="/aboutus">ABOUT US</a></span>
-        <span class="menu-item"><a href="#">PRODUCTS</a></span>
+        <span class="menu-item"><a href="/product">PRODUCTS</a></span>
         <span class="menu-item"><a href="/customer">CUSTOMERS</a></span>
         <span class="menu-item"><a href="/contact">CONTACT</a></span>
     </div>
+    <div id="menu-responsive-btn"><img src="/icon/menu.svg"></div>
 </menu>
