--- a/client/views/home/home-body/home-body.ejs
+++ b/client/views/home/home-body/home-body.ejs
@@ -1,7 +1,7 @@
 <div id="home-body">
     <%- include("./home-intro.ejs") %>
     <%- include("./home-des-slogan.ejs") %> 
-    <%- include("./home-product.ejs") %>
+    <%- include("./home-product.ejs", {categories}) %>
     <%- include("./home-count-up.ejs") %>
     <%- include("./home-project.ejs") %> 
 </div>
