--- a/client/views/pageError/index.ejs
+++ b/client/views/pageError/index.ejs
@@ -1,8 +1,8 @@
 <%- include('../common/head.ejs', {title, description, keyword: "GPT Group, GPT, gpt, gpt group", content: "page error"}) %> 
     <div class="page-error">
         <div class="page-error-logo">
-            <a href="#" class="logo-img">
-                <img src="img/logo.png" alt="Logo GPT">
+            <a href="/home" class="logo-img">
+                <img src="/img/logo.png" alt="Logo GPT">
             </a>
         </div>
 
@@ -19,9 +19,9 @@
             </div>
         </div>
         <div class="page-error-social">
-            <a href="#"><img src="icon/linkedin.svg" alt=""></a>            
-            <a href="#"><img src="icon/instagram.svg" alt=""></a>
-            <a href="#"><img src="icon/facebook.svg" alt=""></a>
+            <a href="#"><img src="/icon/linkedin.svg" alt=""></a>            
+            <a href="#"><img src="/icon/instagram.svg" alt=""></a>
+            <a href="#"><img src="/icon/facebook.svg" alt=""></a>
         </div>
     </div>
 
