--- a/client/views/home/home-body/home-project.ejs
+++ b/client/views/home/home-body/home-project.ejs
@@ -4,19 +4,19 @@
         <div class="project-content-description">Below are some of the outstanding projects we have worked on</div>
     </div>
     <div class="projects">
-        <div class="home-project-card" data-aos="fade-up">
+        <div class="home-project-card">
             <a href="#">
                 <div class="project-card-img"><img src="/img/home/demo-home-project.jpg" alt=""></div>
                 <div class="project-card-content">Example</div>
             </a>
         </div>
-        <div class="home-project-card" data-aos="fade-up">
+        <div class="home-project-card">
             <a href="#">
                 <div class="project-card-img"><img src="/img/home/demo-home-project.jpg" alt=""></div>
                 <div class="project-card-content"></div>
             </a>
         </div>
-        <div class="home-project-card" data-aos="fade-up">
+        <div class="home-project-card">
             <a href="#">
                 <div class="project-card-img"><img src="/img/home/demo-home-project.jpg" alt=""></div>
                 <div class="project-card-content"></div>
